--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smartprompt",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "\"A neat dialog prompter to get inputs from the user\"",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/4skinSkywalker/SmartPrompt.git"
   },
-  "author": "\"Fredo Corleone\"",
+  "author": "Fredo Corleone",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/4skinSkywalker/SmartPrompt/issues"
