--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "smartprompt",
-  "version": "1.0.3",
+  "version": "2.0.3",
   "description": "\"A neat dialog prompter to get inputs from the user\"",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/4skinSkywalker/SmartPrompt.git"
@@ -15,5 +12,12 @@
   "bugs": {
     "url": "https://github.com/4skinSkywalker/SmartPrompt/issues"
   },
-  "homepage": "https://github.com/4skinSkywalker/SmartPrompt#readme"
+  "homepage": "https://github.com/4skinSkywalker/SmartPrompt#readme",
+  "dependencies": {
+    "webpack": "^5.58.1",
+    "webpack-cli": "^4.9.0"
+  },
+  "scripts": {
+    "build": "webpack"
+  }
 }
